--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,26 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#14213d</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="roman_silver">#474350</color>
+    <color name="ivory">#F8FFF4</color>
+    <color name="independence">#3D405B</color>
+    <color name="green_sheen">#81B29A</color>
+    <color name="terra_cotta">#E07A5F</color>
+
+    <color name="laurel_green">#A3B18A</color>
+    <color name="fern_green">#588157</color>
+    <color name="hunter_green">#3A5A40</color>
+    <color name="brunswick_green">#344E41</color>
+    <color name="timberwolf">#DAD7CD</color>
+
+    <color name="rich_black">#0D1B2A</color>
+    <color name="oxford_blue">#1B263B</color>
+    <color name="bdazzled_blue">#415A77</color>
+    <color name="shadow_blue">#778DA9</color>
+    <color name="platinum">#E0E1DD</color>
+
+
 </resources>
